--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                 <h2 class="text-6xl md:text-8xl font-black text-slate-900 mb-12 tracking-tighter">
                     READY TO <br />
                     <span
-                        class="text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-blue-600">COLLABORATE?</span>
+                        class="text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-blue-600">BUILD?</span>
                 </h2>
 
                 <p class="text-xl text-slate-600 mb-8 max-w-2xl mx-auto">
