--- a/index.html
+++ b/index.html
@@ -115,8 +115,6 @@
         <div class="container mx-auto px-6 flex items-center justify-between">
             <!-- Logo -->
             <div class="text-2xl font-bold tracking-tighter text-slate-900 flex items-center gap-2">
-                <div class="w-8 h-8 bg-teal-500 rounded-full flex items-center justify-center text-white font-black">KT
-                </div>
                 <span>K TECH</span>
             </div>
 
@@ -210,7 +208,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col md:flex-row items-center justify-center gap-6 animate-fade-in-up"
+                <div class="mb-2 flex flex-col md:flex-row items-center justify-center gap-6 animate-fade-in-up"
                     style="animation-delay: 0.3s;">
                     <button onclick="document.getElementById('projects').scrollIntoView({behavior: 'smooth'})"
                         class="magnetic-btn group relative px-8 py-4 bg-teal-500 text-white rounded-full font-bold text-lg overflow-hidden shadow-xl shadow-teal-500/20">
@@ -736,6 +734,7 @@
     <footer class="py-8 border-t border-slate-200 bg-slate-50 text-center relative z-10">
         <p class="text-slate-500 text-sm">
             © K Tech 2025. Designed & built by <span class="text-teal-600">Krushna Jawale</span>.
+            <br> want to build website like this? contact krushnajawale2522006@gmail.com
         </p>
     </footer>
 
